# infrapilot-ai-aws

./: .ebignore  .env.example  .gitignore  Bao_cao_du_an.md  Procfile  README.md  backend_explanation.md  config.yaml  package-lock.json  pyproject.toml  requirements.txt  sample_data.json  structure.txt  test_agent.py  test_api.py  wbs_du_an.csv
.ebextensions/: 01_main.config
ai_infra_agent/: main.py
ai_infra_agent/UI/: ARCHITECTURE_INSERT_SUMMARY.md  FIX_PROJECTS_PAGE_SUMMARY.md  NEXTAUTH_VS_SUPABASE_AUTH.md  TLDR_FIX.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
ai_infra_agent/UI/app/: globals.css  layout.tsx  page.tsx  provider.tsx
ai_infra_agent/UI/components/: auth-layout.tsx  chat-message.tsx  dashboard-layout.tsx  sidebar.tsx
ai_infra_agent/UI/data/: data.ts
ai_infra_agent/UI/lib/: auth.ts  supabase_client.ts
ai_infra_agent/UI/styles/: globals.css
ai_infra_agent/UI/types/: data.ts  next-auth.d.ts
ai_infra_agent/agent/: agent.py  plan_executor.py  prompt_builder.py
ai_infra_agent/agent/llms/: gemini.py
ai_infra_agent/api/: dependencies.py
ai_infra_agent/api/v1/: agent_router.py  infrastructure_router.py
ai_infra_agent/core/: config.py  logging.py  supabase_client.py
ai_infra_agent/infrastructure/: tool_factory.py
ai_infra_agent/state/: manager.py  schemas.py
ai_infra_agent/web/: package-lock.json  package.json  pnpm-lock.yaml
settings/: field-mappings-enhanced.yaml  resource-extraction-enhanced.yaml  resource-patterns-enhanced.yaml
settings/templates/: decision-plan-prompt-optimized.txt  tools-execution-context-optimized.txt
tests/infrastructure/: test_websocket.py
(+89 files in other folders)
