[tool.poetry]
name = "ai-infra-agent"
version = "0.1.0"
description = "An AI agent for managing infrastructure"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.0"

boto3 = "^1.29.7"
loguru = "^0.7.2"
langchain = "^0.2.0"
ruamel-yaml = "^0.18.5"
pyyaml = "^6.0.3"
langchain-google-genai = "^1.0.3"
langchain-openai = "^0.1.7"
langchain-anthropic = "^0.1.0"
langchain-aws = "^0.1.0"
pyjwt = "^2.10.1"
uvicorn = {version = "0.24.0", extras = ["standard"]}
websockets = "10.4"
supabase = ">=2.0.0"
psycopg2-binary = "^2.9.9"
click = "^8.3.1"
httptools = "^0.7.1"
uvloop = "^0.22.1"
watchfiles = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
